# drtensor

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/drtensor/: doctor.py  figures.py  hooks.py  utils.py  widgets.py
